Change `buffer` and `buffer2` in `hagl_backend_t` and `buffer` in `hagl_bitmap_t` to use `hagl_color_t`, Added some flags to char and text methods for centering, Added background colour param to char and text methods, Allocate char draw buffer on the fly based on the size of the current glyph instead of using one buffer to rule them all, Added some more fonts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ if (ESP_PLATFORM)
             "src/hagl_vline.c"
             "src/hagl_bitmap.c"
             "src/fontx.c"
+            "src/other_fonts.c"
             "src/hsl.c"
             "src/rgb565.c"
             "src/rgb888.c"
@@ -50,6 +51,7 @@ else()
         ${CMAKE_CURRENT_LIST_DIR}/src/hagl_vline.c
         ${CMAKE_CURRENT_LIST_DIR}/src/hagl_bitmap.c
         ${CMAKE_CURRENT_LIST_DIR}/src/fontx.c
+        ${CMAKE_CURRENT_LIST_DIR}/src/other_fonts.c
         ${CMAKE_CURRENT_LIST_DIR}/src/hsl.c
         ${CMAKE_CURRENT_LIST_DIR}/src/rgb565.c
         ${CMAKE_CURRENT_LIST_DIR}/src/rgb888.c
